[FEA] new crud wine
