# back/public/swagger.json
@@ -6,14 +6,75 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"PingResponse": {
+			"Wine": {
 				"properties": {
-					"message": {
+					"id": {
+						"type": "string"
+					},
+					"categorie": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"date": {
+						"type": "number",
+						"format": "double"
+					},
+					"providedBy": {
 						"type": "string"
 					}
 				},
 				"required": [
-					"message"
+					"id",
+					"name",
+					"date",
+					"providedBy"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ValidateErrorJSON": {
+				"properties": {
+					"message": {
+						"type": "string",
+						"enum": [
+							"Validation failed"
+						],
+						"nullable": false
+					},
+					"details": {
+						"properties": {},
+						"additionalProperties": {},
+						"type": "object"
+					}
+				},
+				"required": [
+					"message",
+					"details"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateWine": {
+				"properties": {
+					"categorie": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"date": {
+						"type": "number",
+						"format": "double"
+					},
+					"providedBy": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"date"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -31,16 +92,24 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/ping": {
+		"/": {
 			"get": {
-				"operationId": "GetMessage",
+				"operationId": "GetWines",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/PingResponse"
+									"anyOf": [
+										{
+											"items": {
+												"$ref": "#/components/schemas/Wine"
+											},
+											"type": "array"
+										},
+										{}
+									]
 								}
 							}
 						}
@@ -48,6 +117,129 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/wine/{id}": {
+			"get": {
+				"operationId": "GetWine",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/Wine"
+										},
+										{}
+									]
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateWine",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateWine"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteWine",
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorJSON"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/wine": {
+			"post": {
+				"operationId": "CreateBottleWine",
+				"responses": {
+					"201": {
+						"description": "Created"
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ValidateErrorJSON"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateWine"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
