# back/src/routes/index.ts
@@ -1,12 +1,0 @@
-import express from "express";
-import PingController from "../controllers/ping";
-
-const router = express.Router();
-
-router.get("/ping", async (_req, res) => {
-  const controller = new PingController();
-  const response = await controller.getMessage();
-  return res.send(response);
-});
-
-export default router;
